# ez-watch

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  setup.py  tsconfig.cloudflare.json  wrangler.toml
app/: channels.py  logging_utils.py  main.py  metrics.py  models.py  relay.py  settings.py  store.py  zones.py
cloudflare/worker/: README.md
cloudflare/worker/src/: index.ts
configs/: zones.yaml
docs/: ARCHITECTURE.md  CHANGELOG_AGENT.md  ORCHESTRATION.md
tests/: test_api.py
